--- a/Rivixal Clock 2.0 Sources/Rivixal Clock/Rivixal Clock.csproj
+++ b/Rivixal Clock 2.0 Sources/Rivixal Clock/Rivixal Clock.csproj
@@ -36,7 +36,7 @@
     <ApplicationIcon>rivixalclock.ico</ApplicationIcon>
   </PropertyGroup>
   <PropertyGroup>
-    <ApplicationManifest>app.manifest</ApplicationManifest>
+    <ApplicationManifest>app1.manifest</ApplicationManifest>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.Bcl.AsyncInterfaces, Version=7.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
@@ -203,6 +203,7 @@
       <DependentUpon>updater.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="app.manifest" />
+    <None Include="app1.manifest" />
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
